<resources>
    <string name="app_name">TrouveTonPote</string>
    <string name="btn_connexion">Connexion</string>
    <string name="btn_signup">s\'enregistrer</string>
    <string name="hint_email">mail</string>
    <string name="Hint_password">mot de passe</string>
    <string name="description_img_login">image friendly trouve ton pote</string>
    <string name="title_register">S\'enregistrer</string>
    <string name="btn_register">S\'enregistrer</string>
    <string name="resister_name">nom</string>
    <string name="confirm_pwd">confirmer mot de passe</string>

    <!--    Complete-->
    <string name="complete_registration">Vous avez bien été enregistré</string>


    <!--    Errors-->
    <string name="error_mail">Veuillez entrer un email valide</string>
    <string name="error_name">Veuillez entrer un nom valide</string>
    <string name="error_password">Le mot de passe doit contenir au moins 8 caractères, une majuscule, une minuscule, un chiffre et un caractère spécial</string>
    <string name="error_same_password">Les mots de passes ne sont pas identiques</string>
    <string name="error_auth">Erreur d\'authentification</string>

    <!--    Titles-->
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">Status</string>
    <string name="helper_text_status">Ce message sera partager aux autres utilisateurs</string>
    <string name="image_profile_description">Image profile</string>

</resources>